--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
+        <p><em>End of Chicken section</em></p>
         <p>
           <a href="#top">Back To Top</a>
         </p>
@@ -61,7 +62,8 @@
         <div class="title">Beef</div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
-          Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.
+          Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
         <p><em>End of Beef section</em></p>
         <p>
@@ -77,6 +79,7 @@
           Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
+        <p><em>End of Sushi section</em></p>
         <p>
           <a href="#top">Back To Top</a>
         </p>
