--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <!-- Mobile dropdown menu -->
       <div class="collapse navbar-collapse" id="mobile-menu">
         <ul class="nav navbar-nav">
-          <li><a href="#chicken">Chicken</a></li>
+          <li><a id="chicken" href="#chicken">Chicken</a></li>
           <li><a href="#beef">Beef</a></li>
           <li><a href="#sushi">Sushi</a></li>
         </ul>
@@ -44,26 +44,26 @@
   <div class="container">
     <div class="row">
       <!-- Chicken Section -->
-      <div class="col-xs-12 col-sm-6 col-md-4 section" id="chicken">
-        <div class="title">Chicken</div>
+      <div class="col col-xs-12 col-sm-6 col-md-4 section" id="chicken">
+        <div  class="title">Chicken</div>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
           Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
           Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
-        <p><em>End of Chicken section</em></p>
+        <p><em>End of Chiken section</em></p>
         <p>
           <a href="#top">Back To Top</a>
         </p>
       </div>
 
       <!-- Beef Section -->
-      <div class="col-xs-12 col-sm-6 col-md-4 section" id="beef">
+      <div class="col col-xs-12 col-sm-6 col-md-4 section" id="beef">
         <div class="title">Beef</div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
-          Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
+            Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
         <p><em>End of Beef section</em></p>
         <p>
@@ -72,12 +72,12 @@
       </div>
 
       <!-- Sushi Section -->
-      <div class="col-xs-12 col-sm-12 col-md-4 section" id="sushi">
+      <div class="col col-xs-12 col-sm-12 col-md-4 section" id="sushi">
         <div class="title">Sushi</div>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
-          Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.  
+            Integer nec odio. Praesent libero. Sed cursus ante dapibus diam.  
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
         </p>
         <p><em>End of Sushi section</em></p>
         <p>
