--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="collapse navbar-collapse" id="mobile-menu">
         <ul class="nav navbar-nav">
-          <li><a id="chicken" href="#chicken">Chicken</a></li>
+          <li><a href="#chicken">Chicken</a></li>
           <li><a href="#beef">Beef</a></li>
           <li><a href="#sushi">Sushi</a></li>
         </ul>
